--- a/src/grub.cfg
+++ b/src/grub.cfg
@@ -1,3 +1,3 @@
-menuentry "peepee poo poo " {
-  multiboot /boot/sleepy.kernel
+menuentry "This One Triple Faults " {
+  multiboot /boot/sleepy.bin
 }
